--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,11 @@
-# Gmail API (you'll get these from Google Cloud Console)
+# Gmail API (OAuth credentials from Google Cloud Console)
 GMAIL_CREDENTIALS_PATH=credentials.json
 GMAIL_TOKEN_PATH=token.json
 
-# Gemini API
-GEMINI_API_KEY=your_key_here
+# Gemini API (get from https://aistudio.google.com/)
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Neo4j
+# Neo4j (will be configured in Part 2)
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=password
+NEO4J_PASSWORD=your_password_here
