--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-# FastAPI and server
+# Core Framework
 fastapi==0.109.0
-uvicorn==0.27.0
+uvicorn[standard]==0.27.0
+pydantic[email]==2.6.0
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
 # Google Gmail API
@@ -9,12 +11,14 @@ google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.116.0
 
-# Neo4j
-neo4j==5.17.0
-
-# Anthropic/Gemini
+# Google Gemini LLM
 google-generativeai==0.3.2
 
-# Utilities
-pydantic==2.6.0
+# HTTP Client
 httpx==0.26.0
+
+# Utilities
+python-dateutil==2.8.2
+
+# Neo4j (Part 2)
+neo4j==5.17.0
